# ratefy

./: .lefthook.yml  .tool-versions  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/ratefy/: Cargo.toml
crates/ratefy-cli/: Cargo.toml
crates/ratefy-cli/src/: main.rs
crates/ratefy-cli/src/types/: layout.rs
crates/ratefy-cli/src/view/: apply_percentage.rs  mod.rs
crates/ratefy-cli/src/views/: apply_percentage.rs  calculate_percentage.rs  mod.rs
crates/ratefy-lib/: Cargo.toml
crates/ratefy-lib/docs/types/: currency_alpha3.md  currency_group.md  money.md
crates/ratefy-lib/src/: lib.rs
crates/ratefy-lib/src/money/: currency.rs  currency_group.rs  mod.rs  model.rs
crates/ratefy-lib/tests/: test_apply_percentage.rs  test_apply_rate.rs  test_currency_alpha3.rs  test_currency_group.rs  test_revert_rate.rs
crates/ratefy-menu/: Cargo.toml
crates/ratefy-menu/src/: lib.rs
crates/ratefy/src/: main.rs
crates/ratefy/src/views/: calculate_percentage.rs
