[package]
name = "ratefy-lib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rust_decimal = { version = "1", features = ["serde"] }
iso_currency = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
rust_decimal_macros = "1"
